# LaboFlow

./: .env.example  .gitignore  Labo-Flow Pro Charts.html  Labo-Flow开发方案（Clawith版）.md  README.md  User-Manual.md  dev.sh  docker-compose.yml  docker-image-manager.sh  nginx.conf  setup-all.sh  stop.sh
Clawith/: .env.example  .gitignore  COMMIT  PER_MACHINE_BRIDGE_DESIGN.md  RELEASE_NOTES.md
Clawith/backend/: Dockerfile  pyproject.toml
Clawith/bridge/: .gitignore  Dockerfile  README.md  clawith-bridge.spec  clawith-bridge.toml.example  launcher.py  pyproject.toml  stub_bridge.py
Clawith/bridge/clawith_bridge/: __init__.py  __main__.py  baked_config.py  config.py  connection.py  diff_capture.py  install_windows.py  protocol.py  reverse_tools.py  session_manager.py
Clawith/bridge/clawith_bridge/adapters/: __init__.py  acp_base.py  base.py  claude_code.py  hermes.py  openclaw.py
Clawith/bridge/tests/: conftest.py  test_acp_adapter.py  test_base_daemon_error_surfacing.py  test_openclaw_adapter.py
Clawith/frontend/: Dockerfile  index.html  pnpm-lock.yaml
Docker/: .env.example  Setup Guide.md  docker-compose.yml
Docker/aippt/: Dockerfile  nginx.conf
aippt/: .env.example  .eslintrc-auto-import.json  .gitignore  .prettierrc.json  Dockerfile  README.md  README.zh-CN.md  auto-imports.d.ts  components.d.ts  demo-presentation.json  eslint.config.js  index.html  nginx.conf  package.json  plugins.ts  pnpm-lock.yaml  project.json  unocss.config.js  vite.config.js
lightrag-1.0.1/: _meta.json
nginx/: Dockerfile  docker.conf
ragflow/: .dockerignore  Dockerfile.laboflow
(+321 files in other folders)
